# moxe

./: .gitignore  Makefile  README.md  hausa_train_ref.py  main.py  pyproject.toml  scan.py  tempCodeRunnerFile.py  train_moxe.py  train_xlstm.py
configs/: config.yaml  eval_config.yaml  train_moxe_config.yaml
configs/eval/: moxe.yaml
configs/model/: SmolLM2.yaml  demo_moxe.yaml  gemma2.yaml  jamba-mini.yaml  mamba.yaml  moxe.yaml  qwen1.5.yaml  xlstm.yaml
configs/trainer/: base.yaml
examples/: convert_gemma2_weights.py
moxe/: __init__.py  config.py  inference.py  observability.py  ops.py  output.py  tensorboard.py
moxe/_trainer/: arguments.py  data.py
moxe/modules/: base_xlstm_moe.py  ffn_expert.py  gate.py  mlstm_moe.py  model.py  moxe.py  slstm_moe.py
moxe/modules/hf/: __init__.py  gemma.py  gemma2.py  gemma2_converter.py
moxe/training/: arguments.py  data.py  helpers.py
moxe/utils/: modules.py  sow.py  types.py
scripts/: train_moxe.py
tests/: create_xlstm.py  gemma2.py  generation.py  losses.py  scan.py  test_gemma2_converter.py
tools/: analyze_losses.py
xlstm_jax/: utils.py  xlstm_block_stack.py  xlstm_lm_model.py
xlstm_jax/blocks/: xlstm_block.py
xlstm_jax/blocks/mlstm/: backends.py  block.py  cell.py  layer.py
xlstm_jax/blocks/slstm/: block.py  cell.py  layer.py
xlstm_jax/blocks/slstm/src/vanilla/: __init__.py  slstm.py
xlstm_jax/components/: conv.py  feedforward.py  linear_headwise.py  ln.py
