[project]
name = "moxe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.90",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "flax>=0.11.1",
    "grain>=0.2.11",
    "hydra-core>=1.3.2",
    "jax>=0.7.0",
    "jaxtyping>=0.3.2",
    "optax>=0.2.5",
    "orbax>=0.1.9",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "tensorboard>=2.19.0",
    "tensorflow>=2.19.0",
    "transformers>=4.55.0",
    "xprof>=2.20.5",
]
